--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tutorial-with-next",
+  "name": "socialcopy-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.465.0",
+    "next": "^15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "^15.3.5"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^15.3.5",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5"
   }
 }
